--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,8 @@
   "extends": ["next/core-web-vitals", "prettier"],
   "rules": {
     "semi": ["error", "never"],
-    "quotes": ["error", "single"]
+    "quotes": ["error", "single"],
+    "no-unused-vars": "error",
+    "import/no-unused-modules": "error"
   }
 }
