--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
       "public/*": ["/public/*"],
       "components/*": ["src/ui/components/*"],
       "containers/*": ["src/ui/containers/*"],
+      "hooks/*": ["src/hooks/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
