Adding education and installing tsparticles

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "format:fix": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@tsparticles/engine": "^3.5.0",
+    "@tsparticles/react": "^3.0.0",
     "framer-motion": "^11.1.9",
     "next": "14.2.3",
     "prettier": "^3.2.5",
