--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
-    "editor.formatOnSave": true,
-    "prettier.jsxSingleQuote": true,
-    "prettier.singleQuote": true,
-    "prettier.enableDebugLogs": false,
-    "html.completion.attributeDefaultValue": "singlequotes"
+  "editor.formatOnSave": true,
+  "prettier.jsxSingleQuote": true,
+  "prettier.singleQuote": true,
+  "prettier.enableDebugLogs": false,
+  "html.completion.attributeDefaultValue": "singlequotes",
+  "CodeGPT.apiKey": "CodeGPT Plus Beta"
 }
