--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,10 @@
 {
   "compilerOptions": {
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -19,13 +23,31 @@
     ],
     "baseUrl": ".",
     "paths": {
-      "app/*": ["./src/*"],
-      "public/*": ["/public/*"],
-      "components/*": ["src/ui/components/*"],
-      "containers/*": ["src/ui/containers/*"],
-      "hooks/*": ["src/hooks/*"],
-    }
+      "app/*": [
+        "./src/*"
+      ],
+      "public/*": [
+        "/public/*"
+      ],
+      "components/*": [
+        "src/ui/components/*"
+      ],
+      "containers/*": [
+        "src/ui/containers/*"
+      ],
+      "hooks/*": [
+        "src/hooks/*"
+      ]
+    },
+    "target": "ES2017"
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
